<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/text_personal_header"
        app:isPreferenceVisible="true">

        <ListPreference
            app:defaultValue="system"
            app:entries="@array/themes_entries"
            app:entryValues="@array/themes_values"
            app:key="theme"
            app:title="@string/text_theme"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_theme_24"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/text_about">

        <PreferenceScreen
            app:key="about"
            app:title="@string/about_title"
            app:icon="@drawable/ic_code_24"/>

        <PreferenceScreen
            app:key="name_version"/>

    </PreferenceCategory>

</PreferenceScreen>