<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_lots"
            android:icon="@drawable/ic_lots_24"
            android:title="@string/menu_lots" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_store_24"
            android:title="@string/menu_sales" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_products_24"
            android:title="@string/menu_products" />
    </group>
</menu>